<com.thedeveloperworldisyours.myvocabulary.words.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/words_frag_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        tools:context="com.thedeveloperworldisyours.myvocabulary.words.WordsFragment">

        <LinearLayout
            android:id="@+id/words_frag_filter_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:weightSum="3">

            <Button
                android:id="@+id/words_frag_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/words_frag_label_all"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/words_frag_active_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/words_frag_label_active"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/words_frag_learned_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/words_frag_label_learned"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/words_frag_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/words_frag_no_data_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone" />

    </RelativeLayout>
</com.thedeveloperworldisyours.myvocabulary.words.ScrollChildSwipeRefreshLayout>