<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>